--- a/app/src/main/res/layout/fragment_player_search.xml
+++ b/app/src/main/res/layout/fragment_player_search.xml
@@ -16,7 +16,7 @@
         app:srcCompat="@drawable/frog" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/tvTimer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -38,7 +38,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/tvTimer" />
 
     <TextView
         android:id="@+id/second_player"
