--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:background="@android:color/darker_gray"
-    tools:context="com.zhelezny.frog.MenuFragment">
+    tools:context="com.zhelezny.frog.presentation.MenuFragment">
 
     <ImageView
         android:id="@+id/iv_logo"
