--- a/app/src/main/res/layout/fragment_nickname.xml
+++ b/app/src/main/res/layout/fragment_nickname.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.zhelezny.frog.NicknameFragment">
+    tools:context="com.zhelezny.frog.presentation.NicknameFragment">
 
     <TextView
         android:id="@+id/tvNickname"
