--- a/app/src/main/res/layout/fragment_player_search.xml
+++ b/app/src/main/res/layout/fragment_player_search.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.zhelezny.frog.PlayerSearchFragment">
+    tools:context="com.zhelezny.frog.presentation.PlayerSearchFragment">
 
     <ImageView
         android:id="@+id/iv_logo"
