--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="red_card">#A00D0D</color>
+    <color name="yellow_card">#F1EC70</color>
+    <color name="blue_card">#3B2BFF</color>
+    <color name="purple_card">#A46CC7</color>
+    <color name="green_card">#62D360</color>
 </resources>
