--- a/app/src/main/res/layout/fragment_player_search.xml
+++ b/app/src/main/res/layout/fragment_player_search.xml
@@ -102,7 +102,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/cancel"
+        android:id="@+id/btCancel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
