--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Frog" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.Frog" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -18,5 +18,11 @@
     <style name="GlobalButtonStyle" parent="Widget.MaterialComponents.Button">
         <item name="android:minWidth">250dp</item>
         <item name="android:minHeight">60dp</item>
+    </style>
+
+    <style name="CardStyle">
+        <item name="android:layout_width">66dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginStart">8dp</item>
     </style>
 </resources>
