--- a/app/src/main/res/layout/fragment_player_search.xml
+++ b/app/src/main/res/layout/fragment_player_search.xml
@@ -8,6 +8,7 @@
 
     <ImageView
         android:id="@+id/iv_logo"
+        android:visibility="gone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
