--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     tools:background="@android:color/darker_gray"
     android:layout_gravity="center_vertical"
-    tools:context="com.zhelezny.frog.presentation.MenuFragment">
+    tools:context="com.zhelezny.frog.presentation.menu.MenuFragment">
 
     <ImageView
         android:id="@+id/iv_logo"
